<resources>
    <string name="app_name">Lab3Weather</string>
    <string name="action_settings">Action Settings</string>
    <string name="temperatura">Temperatura</string>
    <string name="humedad">Humedad</string>
    <string name="descripcion">Descripción</string>
    <string name="fecha_ultima_visualizacion">Fecha ultima visualizacion</string>
    <string name="selecciona_tu_ciudad">Selecciona una Ciudad</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="ciudad">Ciudad</string>
    <string-array name="cities">
        <item>Medellin</item>
        <item>Bogota</item>
        <item>Cali</item>
        <item>Popayan</item>
        <item>Santa Marta</item>
        <item>Cartagena</item>
        <item>Mocoa</item>
        <item>Pasto</item>
        <item>Tumaco</item>
        <item>Envigado</item>
        <item>Barranquilla</item>
        <item>Pereira</item>
        <item>Ibague</item>
        <item>Bucaramanga</item>
        <item>Bello</item>
        <item>Neiva</item>
        <item>Cucuta</item>
        <item>Buenaventura</item>
    </string-array>
    <string name="clima">Clima</string>
    <string name="Temperatura">Temperatura</string>
    <string name="Humedad">Humedad</string>
    <string name="Descripcion">Descripción</string>
    <string name="Fecha">Fecha Actual</string>
    <string name="Thunderstorm">Tormenta Electrica</string>
    <string name="Drizzle">Llovizna</string>
    <string name="Rain">Lluvia</string>
    <string name="Snow">Nevando</string>
    <string name="clear_sky">Cielo Despejado</string>
    <string name="Clouds">Nublado</string>
    <string name="weather_In">El Clima en </string>
    <string name="ciudadActual">Ciudad Actual: </string>
    <string name="errorNotFound">Ciudad No encontrada</string>
    <string name="errorCampRequired">Campo Requerido</string>
    <string name="newCity">Nueva ciudad</string>
    <string name="pag_weather">Estado del clima</string>
    <string name="pag_settings">Configuración</string>
    <string name="errorSameCity">Ups! Es la misma ciudad</string>
    <string name="select_time">Tiempo de refrescado</string>
</resources>
