<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity"
    android:layout_margin="@dimen/widget_margin"
    android:background="@drawable/fondo_widget">

        <TextView
            android:id="@+id/Clima"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginStart="36dp"
            android:text="@string/clima"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/temperatura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Temperatura"
            android:layout_below="@id/Clima"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="24dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/humedad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Humedad"
            android:layout_marginTop="6dp"
            android:layout_below="@id/Clima"
            android:layout_toEndOf="@id/temperatura"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Descripcion"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_below="@id/temperatura"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Fecha"
            android:layout_below="@id/descripcion"
            android:layout_centerInParent="true"
            android:textSize="16sp"

            />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="14dp"
            android:layout_alignParentEnd="true" />

</RelativeLayout>