<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.udea.compumovil.gr6.lab3weather.menu_fragments.SettingsFragment"
    android:background="@color/colorBackground">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/selection_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/selecciona_tu_ciudad"
        android:textAlignment="center"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/name_city"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selection_city"
        android:layout_marginTop="40dp"
        android:textSize="30sp"
        android:hint="@string/ciudad"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_city"
        android:layout_marginTop="25dp"
        android:background="@color/colorPrimary"
        android:text="@string/aceptar"
        android:textColor="#FFFFFF"
        android:onClick="aceptar"/>

</RelativeLayout>

</FrameLayout>
